--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,8 @@ language: node_js
 node_js:
   - "node"
   - "6.1"
-  npm test
+  env:
+- CACHE_TIMEOUT_SECONDS=5
+cache:
+  directories:
+  - node_modules
